# my_notes

./: Cargo.toml  LICENSE  README.MD  install.sh
src/: cli.rs  main.rs  note.rs
