[package]
name = "my-notes"
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "A simple note taking app for taking hierarchical notes in markdown"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
termimad = "0.23.0"
magic_string_search = "0.1.4"
