[package]
name = "my-notes"
version = "1.4.0"
edition = "2021"
readme = "README.MD"
description = "A simple note taking app for taking hierarchical notes in markdown"
license = "MIT"
repository = "https://github.com/DeForestt/my_notes"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "string"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
termimad = "0.23.0"
magic_string_search = "0.2.0"
clap_complete = { version = "4.5.3", features = ["unstable-dynamic"] }
